# finternet-sandbox

./: .gitignore  .gitmodules  Cargo.toml  README.md
finternet-core/: Cargo.toml
finternet-core/src/primitives/: mod.rs  user.rs
finternet-core/src/runtime/: mod.rs
finternet-core/src/smartcontract_interface/: token_manager.rs  user_manager.rs
finternet_core/: Cargo.toml
finternet_core/src/: lib.rs
finternet_core/src/primitives/: asset.rs  core.rs  user.rs
finternet_core/src/smartcontract_interface/: token_manager.rs  user_manager.rs
solana-ul-provider/: Cargo.toml
solana-ul-provider/src/: lib.rs
solana-ul-provider/src/smartcontracts/: mod.rs  token_manager.rs  user_manager.rs
solana-ul-provider/src/solana-program/: Anchor.toml
solana-ul-provider/src/solana-program/programs/token-manager/: Cargo.toml
solana-ul-provider/src/solana-program/programs/token-manager/src/: lib.rs
solana-ul-provider/src/solana-program/programs/user-manager/: Cargo.toml
solana-ul-provider/src/solana-program/programs/user-manager/src/: lib.rs
solana-ul-provider/src/solana-program/tests/: user-manager.ts
solana-ul-provider/src/ul_api_handlers/: identity.rs  mod.rs  smartcontract.rs
